--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
-
+    <header>
+        <ul>
+            <li>
+                <img src="imgs/windowsIcon.png" alt="Иконка windows" width="40px">
+            </li>
+            <li>
+                <img src="imgs/por.png" alt="Иконка Портфолио" width="20px">
+                Портфолио
+            </li>
+            <li>
+                <img src="imgs/aboutUs.png" alt="Иконка Портфолио" width="20px">
+                Обо мне
+            </li>
+            <li>
+                <img src="imgs/a.png" alt="Иконка Портфолио" width="20px">
+                Полезные ссылки
+            </li>
+        </ul>
+    </header>
 </body>
 
 </html>
